--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,28 +1,364 @@
-html, body
-{
-  background-color: #fff;
-  color: #000;
-  letter-spacing: 0.5px;
-  font-family: "Source Sans Pro", Arial, sans-serif;
-  height: 100vh;
-  margin: 0;
-}
+/* ==========================================================================
+   Table of Contents
+   ========================================================================== */
 
-footer
-{
-  padding: 20px;
-  text-align: center;
-  border-top: 1px solid #ddd;
-}
+/*
 
-a, a:hover, a:focus, a:visited
-{
-  color: #000;
-}
+    0.  Normalize
+    1.  Icons
+    2.  General
+    3.  Utilities
+    4.  General
+    5.  Single Post
+    6.  Tag Archive
+    7.  Read Next
+    8.  Third Party Elements
+    9.  Pagination
+    10.  Footer
+    11. Media Queries (Tablet)
+    12. Media Queries (Mobile)
+    13. Animations
 
-.logo {
-  width: 100%;
-  height: auto;
-  max-width: 400px;
-  max-height: 289px;
-}
+*/
+
+/* ==========================================================================
+   0. Normalize.css v2.1.3 | MIT License | git.io/normalize | (minified)
+   ========================================================================== */
+
+   article, aside, details,
+   figcaption, figure,
+   footer, header, hgroup,
+   main, nav, section,
+   summary { display: block; }
+   audio, canvas, video { display: inline-block; }
+   audio:not([controls]) { display: none; height: 0; }
+   [hidden], template { display: none; }
+   html {
+      font-family: sans-serif;
+      -ms-text-size-adjust: 100%;
+      -webkit-text-size-adjust: 100%;
+   }
+   body { margin: 0; }
+   a { background: transparent; }
+   a:focus { outline: thin dotted; }
+   a:active, a:hover { outline: 0; }
+   h1 { font-size: 2em; margin: 0.67em 0; }
+   abbr[title] { border-bottom: 1px dotted; }
+   b, strong { font-weight: 700; }
+   dfn { font-style: italic; }
+   hr {
+      -moz-box-sizing: content-box;
+      box-sizing: content-box;
+      height: 0;
+   }
+   mark { background: #FF0; color: #000; }
+   code, kbd, pre,
+   samp { font-family: monospace, serif; font-size: 1em; }
+   pre { white-space: pre-wrap; }
+   q { quotes: "\201C" "\201D" "\2018" "\2019"; }
+   small { font-size: 80%; }
+   sub, sup {
+      font-size: 75%;
+      line-height: 0;
+      position: relative;
+      vertical-align: baseline;
+   }
+   sup { top: -0.5em; }
+   sub { bottom: -0.25em; }
+   img { border: 0; }
+   svg:not(:root) { overflow: hidden; }
+   figure { margin: 0; }
+   fieldset {
+      border: 1px solid #c0c0c0;
+      margin: 0 2px;
+      padding: 0.35em 0.625em 0.75em;
+   }
+   legend { border: 0; padding: 0; }
+   button, input, select,
+   textarea { font-family: inherit; font-size: 100%; margin: 0; }
+   button, input { line-height: normal; }
+   button, select { text-transform: none; }
+   button, html input[type="button"],
+   input[type="reset"], input[type="submit"] {
+      -webkit-appearance: button;
+      cursor: pointer;
+   }
+   button[disabled], html input[disabled] { cursor: default; }
+   input[type="checkbox"],
+   input[type="radio"] { box-sizing: border-box; padding: 0; }
+   input[type="search"] {
+      -webkit-appearance: textfield;
+      -moz-box-sizing: content-box;
+      -webkit-box-sizing: content-box;
+      box-sizing: content-box;
+   }
+   input[type="search"]::-webkit-search-cancel-button,
+   input[type="search"]::-webkit-search-decoration { -webkit-appearance: none; }
+   button::-moz-focus-inner,
+   input::-moz-focus-inner { border: 0; padding: 0; }
+   textarea { overflow: auto; vertical-align: top; }
+   table { border-collapse: collapse; border-spacing: 0; }
+   
+   /* ==========================================================================
+      2. General - Setting up some base styles
+      ========================================================================== */
+   
+   html {
+       height: 100%;
+       max-height: 100%;
+       font-size: 62.5%;
+       -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+   }
+   
+   body {
+       height: 100%;
+       max-height: 100%;
+       font-family: 'Avenir Next',Avenir,'Helvetica Neue',Helvetica,'Hiragino Sans GB','Microsoft YaHei',"微软雅黑",STHeiti,'WenQuanYi Micro Hei',SimSun,sans-serif;
+       letter-spacing: 0.01rem;
+       font-size: 1.8rem;
+       line-height: 1.75em;
+       color: #3A4145;
+       -webkit-font-feature-settings: 'kern' 1;
+       -moz-font-feature-settings: 'kern' 1;
+       -o-font-feature-settings: 'kern' 1;
+       text-rendering: geometricPrecision;
+   }
+   
+   ::-moz-selection {
+       background: #D6EDFF;
+   }
+   
+   ::selection {
+       background: #D6EDFF;
+   }
+   
+   h1, h2, h3,
+   h4, h5, h6 {
+       -webkit-font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
+       -moz-font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
+       -o-font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
+       color: #2E2E2E;
+       line-height: 1.15em;
+       margin: 0 0 0.4em 0;
+       font-family: "Open Sans", sans-serif;
+       text-rendering: geometricPrecision;
+   }
+   
+   h1 {
+       font-size: 5rem;
+       letter-spacing: -2px;
+       text-indent: -3px;
+   }
+   
+   h2 {
+       font-size: 3.6rem;
+       letter-spacing: -1px;
+   }
+   
+   h3 {
+       font-size: 3rem;
+   }
+   
+   h4 {
+       font-size: 2.5rem;
+   }
+   
+   h5 {
+       font-size: 2rem;
+   }
+   
+   h6 {
+       font-size: 2rem;
+   }
+   
+   a {
+       color: #4A4A4A;
+       transition: color 0.3s ease;
+   }
+   
+   a:hover {
+       color: #111;
+   }
+   
+   p, ul, ol, dl {
+       -webkit-font-feature-settings: 'liga' 1, 'onum' 1, 'kern' 1;
+       -moz-font-feature-settings: 'liga' 1, 'onum' 1, 'kern' 1;
+       -o-font-feature-settings: 'liga' 1, 'onum' 1, 'kern' 1;
+       margin: 0 0 1.75em 0;
+       text-rendering: geometricPrecision;
+   }
+   
+   ol, ul {
+       padding-left: 3rem;
+   }
+   
+   ol ol, ul ul,
+   ul ol, ol ul {
+       margin: 0 0 0.4em 0;
+       padding-left: 2em;
+   }
+   
+   dl dt {
+       float: left;
+       width: 180px;
+       overflow: hidden;
+       clear: left;
+       text-align: right;
+       text-overflow: ellipsis;
+       white-space: nowrap;
+       font-weight: 700;
+       margin-bottom: 1em;
+   }
+   
+   dl dd {
+       margin-left: 200px;
+       margin-bottom: 1em
+   }
+   
+   li {
+       margin: 0.4em 0;
+   }
+   
+   li li {
+       margin: 0;
+   }
+   
+   hr {
+       display: block;
+       height: 1px;
+       border: 0;
+       border-top: #EFEFEF 1px solid;
+       margin: 3.2em 0;
+       padding: 0;
+   }
+   
+   blockquote {
+       -moz-box-sizing: border-box;
+       box-sizing: border-box;
+       margin: 1.75em 0 1.75em -2.2em;
+       padding: 0 0 0 1.75em;
+       border-left: #4A4A4A 0.4em solid;
+   }
+   
+   blockquote p {
+       margin: 0.8em 0;
+       font-style: italic;
+   }
+   
+   blockquote small {
+       display: inline-block;
+       margin: 0.8em 0 0.8em 1.5em;
+       font-size: 0.9em;
+       color: #CCC;
+   }
+   
+   blockquote small:before { content: "\2014 \00A0"; }
+   
+   blockquote cite {
+       font-weight: 700;
+   }
+   
+   blockquote cite a { font-weight: normal; }
+   
+   mark {
+       background-color: #fdffb6;
+   }
+   
+   code, tt {
+       padding: 1px 3px;
+       font-family: Inconsolata, monospace, sans-serif;
+       font-size: 0.85em;
+       white-space: pre-wrap;
+       border: #eee 1px solid;
+       background: #F7FAFB;
+       border-radius: 2px;
+   }
+   
+   pre {
+       -moz-box-sizing: border-box;
+       box-sizing: border-box;
+       margin: 0 0 1.75em 0;
+       border: #eee 1px solid;
+       width: 100%;
+       padding: 10px;
+       font-family: Inconsolata, monospace, sans-serif;
+       font-size: 0.9em;
+       white-space: pre;
+       overflow: auto;
+       background: #F7FAFB;
+       border-radius: 3px;
+   }
+   
+   pre code, pre tt {
+       font-size: inherit;
+       white-space: pre-wrap;
+       background: transparent;
+       border: none;
+       padding: 0;
+   }
+   
+   kbd {
+       display: inline-block;
+       margin-bottom: 0.4em;
+       padding: 1px 8px;
+       border: #CCC 1px solid;
+       color: #666;
+       text-shadow: #FFF 0 1px 0;
+       font-size: 0.9em;
+       font-weight: 700;
+       background: #F4F4F4;
+       border-radius: 4px;
+       box-shadow:
+           0 1px 0 rgba(0, 0, 0, 0.2),
+           0 1px 0 0 #fff inset;
+   }
+   
+   table {
+       -moz-box-sizing: border-box;
+       box-sizing: border-box;
+       margin: 1.75em 0;
+       width: 100%;
+       max-width: 100%;
+       background-color: transparent;
+   }
+   
+   table th,
+   table td {
+       padding: 8px;
+       line-height: 20px;
+       text-align: left;
+       vertical-align: top;
+       border-top: #EFEFEF 1px solid;
+   }
+   
+   table th { color: #000; }
+   
+   table caption + thead tr:first-child th,
+   table caption + thead tr:first-child td,
+   table colgroup + thead tr:first-child th,
+   table colgroup + thead tr:first-child td,
+   table thead:first-child tr:first-child th,
+   table thead:first-child tr:first-child td {
+       border-top: 0;
+   }
+   
+   table tbody + tbody { border-top: #EFEFEF 2px solid; }
+   
+   table table table { background-color: #FFF; }
+   
+   table tbody > tr:nth-child(odd) > td,
+   table tbody > tr:nth-child(odd) > th {
+       background-color: #F6F6F6;
+   }
+   
+   table.plain tbody > tr:nth-child(odd) > td,
+   table.plain tbody > tr:nth-child(odd) > th {
+      background: transparent;
+   }
+   
+   
+   /* ==========================================================================
+      End of file. Animations should be the last thing here. Do not add stuff
+      below this point, or it will probably fuck everything up.
+      ========================================================================== */
+   
